# SmartStayAi

./: .coverage  .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
airflow/: 09_airflow_dag.py  Dockerfile  README.md
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: actuals.py  analytics.py  auth.py  dashboard.py  explain.py  pipeline.py  prediction.py  rates.py  seasonality.py  sentiment.py  sentiment_insights.py
backend/app/core/: security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  actual.py  pipeline_run.py  prediction.py  rate_decision.py  user.py
backend/app/schemas/: actual.py  analytics.py  auth.py  dashboard.py  pipeline.py  prediction.py  rate_decision.py  rates.py
backend/app/services/: actual_service.py  analytics_service.py  dashboard_service.py  pipeline_service.py  prediction_service.py  rate_service.py
config/: config.py
data/models/: gbm_model.joblib  prophet_model.joblib  rf_model.joblib
data/prediction/: model_comparison.json  model_metrics.json  predictions_2026.csv  prophet_predictions.csv  rescore_2026-03-13.csv  rescore_2026-03-14.csv  rescore_2026-03-15.csv  rescore_2026-03-17.csv  rescore_2026-03-18.csv  rescore_2026-03-23.csv
data/prophet/: components_full.csv  forecast_comparison.json  seasonality_trend.json  seasonality_weekly.json  seasonality_yearly.json
data/sentiment/: insights_cache.json  monthly_sentiment.csv  reviews_scored.csv  sentiment_occupancy_correlation.csv  sentiment_summary.json  tripadvisor_reviews_raw.json
data/shap/: shap_explanations.json  shap_summary.json  shap_values.csv
frontend/: Dockerfile  Dockerfile.Dockerfile  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/analytics/: page.jsx
frontend/app/components/charts/: SeasonalityCharts.jsx
frontend/app/components/layout/: DashboardLayout.jsx  Header.jsx  Sidebar.jsx
frontend/app/components/ui/: AlertBanner.jsx  Badge.jsx  EmptyState.jsx  KpiCard.jsx  LoadingSpinner.jsx  Modal.jsx  ShapTooltip.jsx
frontend/app/context/: AuthContext.jsx
frontend/app/dashboard/: page.jsx
frontend/app/forecast/: page.jsx
frontend/app/lib/: api.js  format.js
frontend/app/login/: page.jsx
frontend/app/pipeline/: page.jsx
frontend/app/rates/: page.jsx
frontend/app/register/: page.jsx
frontend/app/sentiment/: page.jsx
frontend/src/: App.jsx
mlruns/1/models/m-2a1c26be99fa4c06a251fe5749d1252e/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-443c3e1982434f86b6abd9a583f11aab/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-b0a445ca3de34accbf676782997f6f52/artifacts/: MLmodel  requirements.txt
mlruns/1/models/m-b876c91b5b3540679c1e602aaadbe1e5/artifacts/: MLmodel  conda.yaml  model.pkl
noteboooks/: eda_matrix.ipynb  eda_smartstay.ipynb
scripts/: 01_clean_hicksteads_occapancy.py  01_clean_occupancy.py  02_clean_day_by_day.py  03_clean_bookingcom.py  04_clean_pickup.py  05_clean_fit_rates.py  06_build_matrix.py  06_merge_data.py  07_train_model.py  07_train_model_mlflow.py  07b_prophet_model.py  08_pipeline.py  11_shap_explainability.py  12_prophet_seasonality.py  13_sentiment_analysis.py  clean_hicksteads_occapancy.py  daily_rescore.py  generate_synthetic_data.py  pipeline.py
tests/: conftest.py  test_api.py  test_model.py
